--- a/index.html
+++ b/index.html
@@ -7,33 +7,36 @@
 			src="https://kit.fontawesome.com/5f95a73160.js"
 			crossorigin="anonymous"
 		></script>
-		<link href="style/style.css" rel="stylesheet" type="text/css" />
-		<link href="style/normalizer.css" rel="stylesheet" type="text/css" />
 
-		<title>Les petits plats</title>
+		<title>Conesa</title>
 	</head>
 	<body>
 		<div class="container">
 			<header>
 				<a href="index.html">
-					<img src="assets/image/logo.svg" class="logo" alt="logo" />
+					<img
+						src="./logo/logo_Conesa-min.png"
+						class="logo"
+						alt="logo"
+						style="width: 10%; padding: 2rem"
+					/>
 				</a>
 			</header>
 			<main>
-				<form class="search_form" id="form"></form>
-				<div class="tag" id="tag"></div>
-				<section class="filter" id="section"></section>
-				<section class="all_recipes" id="allRecipes"></section>
+				<section
+					style="
+						padding: 2rem;
+						justify-content: center;
+						background-color: black;
+						color: white;
+					"
+				>
+					<h2>
+						CONESA TP<br />Terrassement, création et entretien
+						espace vert.
+					</h2>
+				</section>
 			</main>
-			<!-- 
-			<script type="scripts" src="mvc/controllers.js"></script>
-			<script type="module" src="mvc/model.js"></script>
-			<script type="module" src="mvc/view.js"></script>
-			<script type="module" src="modules/recipes.json"></script>
-			<script src="scripts/functions.js"></script>
-			 -->
 		</div>
-	
-		<script type="module" src="mvc/configMVC.js"></script>
 	</body>
 </html>
